// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#appendFilterQuery appends filter query to list of filters within the given query 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "term": Object {
          "service.name": "opbeans-java",
        },
      },
      Object {
        "term": Object {
          "transaction.type": "request",
        },
      },
      Object {
        "term": Object {
          "transaction.name": "DispatcherServlet#doGet",
        },
      },
      Object {
        "exists": Object {
          "field": "transaction.duration.histogram",
        },
      },
    ],
  },
}
`;

exports[`#appendFilterQuery creates new filtered query when the given query is blank 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "exists": Object {
          "field": "transaction.duration.histogram",
        },
      },
    ],
  },
}
`;

exports[`#appendFilterQuery does not change query when given a blank filter query 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "term": Object {
          "service.name": "opbeans-java",
        },
      },
      Object {
        "term": Object {
          "transaction.type": "request",
        },
      },
      Object {
        "term": Object {
          "transaction.name": "DispatcherServlet#doGet",
        },
      },
    ],
  },
}
`;
